Multi threaded SAFE

--- a/usr/tests/Makefile
+++ b/usr/tests/Makefile
@@ -5,10 +5,11 @@ CFLAGS=
 LDFLAGS= -pthread
 PROXY=/opt/hermit/bin/proxy
 MEM=1G
+CPUS=4
 VERBOSE=0
 
 all: $(PROG)
 	$(CC) $(CFLAGS) $(SRC) -o $(PROG) $(LDFLAGS)
 
 test: all
-	HERMIT_MEM=$(MEM) HERMIT_VERBOSE=${VERBOSE} HERMIT_ISLE=uhyve HERMIT_KVM=0 $(PROXY) $(PROG)
+	HERMIT_MEM=$(MEM) HERMIT_CPUS=${CPUS} HERMIT_VERBOSE=${VERBOSE} HERMIT_ISLE=uhyve HERMIT_KVM=0 $(PROXY) $(PROG)
